--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,25 @@
     <title>Meower</title>
 </head>
 <body>
-    Hello world
+    
+    <main>
+        <h2 class="round__title">2</h2>
+        <div class="tracker">
+            <div class="timer">
+                <h1 class="timer__minutes">49</h1>
+                <h1 class="timer__separator">:</h1>
+                <h1 class="timer__seconds">49</h1>
+            </div>
+            <div class="control__buttons">
+                <button class="start__button">START</button>
+                <button class="finish__button">FINISH</button>
+            </div>
+        </div>
+        <h5 class="long__break__info">It is impossible to know the end time while the application is paused.</h5>
+    </main>
+
+    <section class="logs"></section>
+
+    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
