--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
 <body>
     
     <main>
-        <h2 class="round__title">2</h2>
+        <h2 class="round__title">1</h2>
         <div class="tracker">
             <div class="timer">
-                <h1 class="timer__minutes">49</h1>
+                <h1 class="timer__minutes">50</h1>
                 <h1 class="timer__separator">:</h1>
-                <h1 class="timer__seconds">49</h1>
+                <h1 class="timer__seconds">00</h1>
             </div>
             <div class="control__buttons">
                 <button class="start__button">START</button>
@@ -22,10 +22,13 @@
             </div>
         </div>
         <h5 class="long__break__info">It is impossible to know the end time while the application is paused.</h5>
+        <audio src="../public/audio/meow.mp3" preload="auto"></audio>
     </main>
 
-    <section class="logs"></section>
+    <section class="logs">
+        <div></div>
+    </section>
 
-    <script src="./js/index.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
