--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="shortcut icon" href="./svg/work-icon.svg" type="image/x-icon" class="title__icon">
+    <link rel="manifest" href="./manifest.json">
     <title>Meower</title>
 </head>
 <body>
