fix: change paths for media assets

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./svg/work-icon.svg" type="image/x-icon" class="title__icon">
-    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="shortcut icon" href="/svg/work-icon.svg" type="image/x-icon" class="title__icon">
+    <link rel="manifest" href="/manifest.json">
     <title>Meower</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <h5 class="long__break__info">It is impossible to know the end time while the application is paused.</h5>
-        <audio src="./audio/meow.ogg" preload="auto"></audio>
+        <audio src="/audio/meow.ogg" preload="auto"></audio>
     </main>
 
     <section class="logs">
@@ -50,6 +50,6 @@
         </div>
     </section>
 
-    <script src="./js/main.js" type="module"></script>
+    <script src="/js/main.js" type="module"></script>
 </body>
 </html>
