feat: add mobile adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <h5 class="long__break__info">It is impossible to know the end time while the application is paused.</h5>
-        <audio src="/audio/meow.ogg" preload="auto"></audio>
+        <audio src="/audio/meow.mp3" preload="auto"></audio>
     </main>
 
     <section class="logs">
